recursion.lessons.recursion.koch.Koch.scala.error
Koch:15: error: not found: value nowSide
		nowSide(levels-1, length/3)
                ^